# RefCM

./: .gitignore  LICENSE  README.md  env.yml  project-info.md  pyproject.toml
benchmarks/: allen_scvi.ipynb  allen_seurat.R  allen_svm.ipynb  splatter_refcm_svm_cipr.ipynb  splatter_scvi.ipynb  splatter_seurat.R  splatter_simulation.R
benchmarks/results/: analysis.ipynb
benchmarks/results/scvi/: ALM-VISp.npy  VISp-ALM.npy  alm-mtg.npy  mtg-alm.npy  mtg-visp.npy  visp-mtg.npy
benchmarks/results/svm/: ALM-MTG.npy  ALM-VISp.npy  MTG-ALM.npy  MTG-VISp.npy  VISp-ALM.npy  VISp-MTG.npy
data/: read_h5ad.py  setup.ipynb
experiments/: alltypes.json  bench_seurat.R  benchmarking.ipynb  benchmarking.py  benchmarks.ipynb  brain.ipynb  celltypist.ipynb  fig2.ipynb  fig3.ipynb  gpt.json  hierarchical.ipynb  lgn.ipynb  multi_reference.ipynb  noise.ipynb  pancreas.ipynb  param_search.ipynb  params.json  pbmc.ipynb  typetree.json  ws_cache.json
src/: cache.json  config.py  embeddings.py  env.yml  matchings.py  refcm.py
src/refcm/: __init__.py  config.py  embeddings.py  matchings.py  refcm.py  utils.py
vignettes/: FIG2.ipynb  FIG3.ipynb  ablation.ipynb  benchdb.py  benchmarking.ipynb  benchmarking.py  benchmodels.py  benchplots.py  benchtest.ipynb  benchutils.py  brain.ipynb  fig1.ipynb  fig2.ipynb  fig3.ipynb  hierarchical.ipynb  leiden.ipynb  leiden.json  noise.ipynb  pancreas.ipynb  pbmc.ipynb  runtime.ipynb  runtime.py  suppl.ipynb  timings.csv  tmuris.py  trees.ipynb
vignettes/noise/: cnoise.json  mnoise.json
